Apply suggestions from code review
Co-authored-by: Maria Elisabeth Schreiber <maria.schreiber@apollographql.com>

--- a/src/content/graphos/delivery/schema-checks.mdx
+++ b/src/content/graphos/delivery/schema-checks.mdx
@@ -138,9 +138,9 @@ The new checks run incorporates any changes made to excluded or included clients
 
 ## Build checks
 
-When you run `rover subgraph check`, GraphOS performs a **build check** _before_ it performs any other checks. Also known as a **composition check**, a build check verifies that changes you make to a subgraph schema are valid GraphQL definitions and are compatible with your _other_ subgraph schemas, enabling them to compose into a _supergraph_ schema for your router ([learn more](/federation/federated-types/composition/)).
+When you run `rover subgraph check`, GraphOS first performs a **build check** to verify that the subgraph schema still contains valid GraphQL after any changes. Build checks are also known as a **composition checks** because they verify that changes to the subgraph are compatible with your _other_ subgraph schemas, enabling them to compose into a _supergraph_ schema for your router ([learn more](/federation/federated-types/composition/)).
 
-> If a build check fails, Studio does _not_ then perform additional checks for the provided schema.
+> If a build check fails, Studio does _not_ perform additional checks for the provided schema.
 
 From your graph's Checks page in GraphOS Studio, you can click on a particular build check to view its result. If composition succeeded, you can view the composed supergraph schema. Regardless of success, you can view the proposed subgraph schema.
 
