--- a/src/content/technotes/TN0032-sdui-basics.mdx
+++ b/src/content/technotes/TN0032-sdui-basics.mdx
@@ -4,13 +4,13 @@ id: TN0032
 tags: [schema-design, server-driven-ui]
 ---
 
-Server-driven UI (SDUI) is an architectural pattern that aims to reduce client-side logic and provide consistency across client platforms (web, iOS,Android, etc.) by returning product information from an API instead of domain data. This approach is geared toward use cases where collaboration between front-end and back-end teams is possible, and there is a strong desire to build a cohesive experience across multiple teams and organizations.
+Server-driven UI (SDUI) is an architectural pattern that aims to reduce client-side logic and provide consistency across client platforms (web, iOS, Android, etc.) by returning product information from an API instead of domain data. This approach is geared toward use cases where collaboration between front-end and back-end teams is possible, and there is a strong desire to build a cohesive experience across multiple teams and organizations.
 
 > For advanced patterns and schema types, see [more SDUI topics](/technotes/tags/server-driven-ui).
 
 ## Architectural goals
 
-The primary need for SDUI comes from mobile native-app development. These platforms require shipping versions of your client-side app to a store that usually has a lengthy review process before a new version gets published. Then, even after a new app version is released, users have to update their versions from the store to start using or experiencing the new features.
+The primary need for SDUI comes from mobile native-app development. These platforms require shipping versions of your client-side app to an app store that usually has a lengthy review process before a new version gets published. Then, even after a new app version is released, users must update their versions to start using or experiencing the new features.
 
 If your API returns exactly what to display on the screen, you can control the different UI elements or text without app version updates. You can also change the inputs sent to the API without requiring any app updates.
 
@@ -18,17 +18,17 @@ When building a graph with server-driven UI, converging the schema with the desi
 
 ## Guiding principles
 
-SDUI is not a framework or library you can install. It's a design pattern you can implement in different ways while still adhering to the same core principles. You may start with just a few parts of your app controlled by the server, like text or whether to hide certain UI elements. SDUI could then advance to more parts of your app, like changing theming or component features from the API, all the way to having a generic layout that can render any UI component in any order.
+SDUI is not a framework or library you can install. It's a design pattern you can implement in different ways while still adhering to the same core principles.
 
 ### Start with UI designs
 
-Start with your UI designs instead of looking at data models or API responses.  Take a [demand-driven schema design approach](/technotes/TN0027-demand-oriented-schema-design/) write your preferred query from the client's perspective. The demand-driven concept can apply to any client, but UI applications should **have a direct connection from the API response to items on the screen**.
+Start with your UI designs instead of looking at data models or API responses.  Take a [demand-driven schema design approach](/technotes/TN0027-demand-oriented-schema-design/) to write your preferred query from the client's perspective. The demand-driven concept can apply to any client, but UI applications should **have a direct connection from the API response to items on the screen**.
 
 If you find yourself describing steps to go from API to views, that's a warning sign that you'll have to duplicate that logic across clients.
 
 ### Reduce logic in existing client code
 
-Next, identify any logic in your existing client code. Some may think of "logic" as only business rules in the backend. However, if you've ever had to update conditionals or switch statements for a new feature, or to update how a feature works, you can consider these frontend portions as "logic," too. Any other places that accept your API response and then transform, concatenate, or use helper functions are additional warning signs for logic. 
+Identify and reduce any logic in your existing client code. Some may think of "logic" as only business rules in the backend. However, if you've ever had to update conditionals or switch statements for a new feature, or to update how a feature works, you can consider these frontend portions as "logic," too. Any other places that accept your API response and then transform, concatenate, or use helper functions are additional warning signs for logic. 
 
 If you had to change this type of logic in one client, you probably had to change it in others. You can reduce this redundancy by moving the logic to your API.
 
@@ -118,4 +118,3 @@ query FeaturedProductsCollection {
     }
   }
 }
-```
