--- a/src/content/technotes/TN0042-sdui-client-design.mdx
+++ b/src/content/technotes/TN0042-sdui-client-design.mdx
@@ -4,7 +4,7 @@ id: TN0042
 tags: [client, server-driven-ui]
 ---
 
-In server-driven UI (SDUI), the client's goal is to handle pixels, not data. It should simply take what the API provides and render it in the proper location.
+In server-driven UI (SDUI), the client's goal is to handle pixels, not data. The client should simply take what the API provides and render it in the proper location.
 
 When [adopting SDUI incrementally](./TN0032-sdui-basics/#adopt-sdui-incrementally), you usually start with basic UI elements like text and images. As you shift more logic, such as component layouts, to the server,  clients can have a set of [UI component types mapped to their specific platform](#device-based-sdui-with-enums). This allows clients to render content tailored to their platform.
 
