--- a/src/content/technotes/TN0032-sdui-basics.mdx
+++ b/src/content/technotes/TN0032-sdui-basics.mdx
@@ -118,3 +118,7 @@ query FeaturedProductsCollection {
     }
   }
 }
+
+\```
+
+Check out [SDUI schema design](TN0033-sdui-schema-design/) for more design patterns.
