--- a/src/content/technotes/TN0033-sdui-schema-design.mdx
+++ b/src/content/technotes/TN0033-sdui-schema-design.mdx
@@ -6,7 +6,7 @@ tags: [schema-design, server-driven-ui]
 
 These patterns provide examples of server-driven UI (SDUI) and how to structure your graph's schema to encode and represent UI elements. Clients can then use platform-specific rendering engines to interpret the schema and generate UI components.
 
-> For more information on SDUI in general, see [Server-driven UI basics](TN0032-sdui-basics/).
+> For more information on SDUI in general, see [Server-driven UI basics](/technotes/TN0032-sdui-basics/).
 
 ## Device-based SDUI with enums
 
