Update field navigation

--- a/src/content/graphos/metrics/field-usage.mdx
+++ b/src/content/graphos/metrics/field-usage.mdx
@@ -11,8 +11,6 @@ Once you've configured your graph to send [field metrics to GraphOS](./sending-o
   alt="The Insights page in GraphOS Studio"
 />
 
-
-
 The Insights page presents operation and field metrics. It has two main sections:
 
 - The **collapsible left sidebar**. Search, filter, and sort operations and fields.
@@ -40,9 +38,10 @@ To hone in on certain fields:
 
   - Alphabetically
   - By total requests (count)
-  - By request rate in rpm (rpm)
+  - By request rate in requests per minute (rpm)
   - By executions (count)
-
+  - By total errors, error %, or error rate
+  - By p50, p90, p95, and p99 latency in milliseconds, seconds, or minutes (ms, s, min)
 
 <img
   src="../img/field-sidebar-sort.jpg"
