--- a/src/content/graphos/metrics/operations.mdx
+++ b/src/content/graphos/metrics/operations.mdx
@@ -14,17 +14,17 @@ Once you've configured your graph to send [operation metrics to GraphOS](./sendi
 This page combines operation and field metrics and has two main sections:
 
 - The collapsible left sidebar, where you can [search, filter, and sort operations](#operation-metrics) and fields (refer to [Field usage](./fields-usage) for more information on field metrics)
-- The main insights view, which displays an [**Operations Overview**](#operations-overview) and overall [request metrics](#request-metrics), like the [request rate](#request-rate)
+- The main insights view, which displays an [**Operations Overview**](#operations-overview) and overall [operation metrics](#operation-metrics), like the [request rate](#request-rate)
 
 When you click an operation name from the left sidebar or overview, this view shows [detailed information](#operation-details) about the individual operation.
 
 <img
-  src="../img/operation-signature.jpg"
+  src="../img/operation-details.jpg"
   className="screenshot"
   alt="The Insights page in GraphOS Studio"
 />
 
-You can always return to the overall view by clicking **← Back to All Operations** in the upper right.
+You can always return to the overall view by clicking **Overview** the left sidebar.
 
 ## Operations overview
 
@@ -49,6 +49,8 @@ Beneath each of those metrics, you can also see the individual operations with:
 > The blue **M** icon next to an operation name indicates it's a mutation.
 > The purple **S** icon next to an operation name indicates it's a subscription.
 
+You can click an operation name to view more [detailed information](#operation-details) about it or scroll down to see more overall [request metrics](#operation-metrics).
+
 You can adjust the overview's timeframe and filter by client in the top right corner.
 
 <img
@@ -57,9 +59,7 @@ You can adjust the overview's timeframe and filter by client in the top right co
   alt="Operations Overview in GraphOS Studio"
 />
 
-You can click an operation name to view more [detailed information](#operation-details) about it or scroll down to see more overall [request metrics](#request-metrics).
-
-## Operation metrics
+## Operation navigation
 
 By default, the left sidebar shows a paginated list of all operations, but you can use it to hone in on certain ones.
 Specifically, you can:
@@ -98,15 +98,15 @@ As with the operations overview, you can click an operation name to view more de
 
 ### Operation details
 
-When you click an operation name, you open detailed information for that operation in the main insights view. This information includes the operation's [**operation signature**](./operation-signatures) and [**query plan**](/federation/query-plans/) as a chart or text.
-
-To the right of the operation signature and query plan, you can view the operations **usage**, **error** metrics, or [**traces**](#resolver-level-traces) by toggling the labels above the operation signature or query plan.
+When you click an operation name, you open detailed information for that operation in the main insights view. This information includes the operation's [**operation signature**](./operation-signatures) and [**query plan**](/federation/query-plans/) as a chart or text, which you can view by clicking **View Operation**.
 
 <img
   src="../img/operation-signature.jpg"
   className="screenshot"
   alt="The Insights page in GraphOS Studio"
 />
+
+You can use the toggles below the operation name to view the operation's **usage**, **error** metrics, or [**traces**](#resolver-level-traces).
 
 ### Resolver-level traces
 
@@ -131,13 +131,13 @@ To enable federated trace reporting in your subgraphs, consult the documentation
 
 If your subgraphs use [Apollo Server with the `@apollo/subgraph` library](/apollo-server/using-federation/apollo-subgraph-setup/), federated trace reporting is enabled by default. You can customize Apollo Server's trace reporting behavior with the [inline trace plugin](/apollo-server/api/plugin/inline-trace).
 
-## Request metrics
+## Operation metrics
 
 Directly below the [**Operations Overview**](#operations-overview), you can find the following request and subscription metric visualizations:
 
-- A time series chart showing the [**request rate**](#request-rate) in requests per minute (req/min)
-- A [**request latency**](#request-latency) heatmap, generally in milliseconds, seconds, and/or minutes (ms, s, min)
-- A [**request latency distribution**](#request-latency-distribution) histogram
+- Time series charts showing the [**request rate**](#request-rate) and [**subscription notification rate**](#subscription-notification-rate) in requests per minute (req/min)
+- [**Request latency**](#request-latency) and [**subscription notification latency**](#subscription-notification-rate) heatmaps, generally in milliseconds, seconds, and/or minutes (ms, s, min)
+- [**Request latency distribution**](#request-latency-distribution) and [**Subscription notification latency distribution**](#subscription-notification-latency-distribution) histograms
 
 ### Request rate
 
@@ -151,6 +151,16 @@ The request rate chart enables you to keep an eye on your supergraph's traffic o
 
 Request rate metrics can also help with capacity planning. By tracking request rate trends, you can make informed decisions regarding infrastructure scaling. You can also rely on these graphs for anomaly detection, including identifying issues like DDoS attacks, application errors, or resource constraints.
 
+### Subscription notification rate
+
+<img
+  src="../img/insights-subscription-rate.jpg"
+  className="screenshot"
+  alt="The Insights page in GraphOS Studio"
+/>
+
+The subscription notification rate is the total number of updates sent to clients as the result of all [subscriptions](/apollo-server/data/subscriptions/) over a specified period of time. A sudden spike in subscription notification rate could indicate a surge in real-time activity and help you anticipate the need for scaling your infrastructure.
+
 ### Request latency
 
 <img
@@ -163,6 +173,54 @@ Request latency measures the time it takes for a GraphQL operation to be process
 
 Request latency metrics provide crucial insights into the performance of various components of your services, such as resolvers, data sources, and third-party services. This data can help you identify areas where optimization is needed.
 
+### Subscription notification latency
+
+<img
+  src="../img/insights-subscription-latency.jpg"
+  className="screenshot"
+  alt="The Insights page in GraphOS Studio"
+/>
+
+Subscription notification latency measures the amount of time it takes for your graph to send updates to clients as the result of a change in your graph.
+
+For example, you can imagine subscriptions being used for a chat app like this:
+
+- **Step 0**. A subscription is defined in your graph's schema. It might look something like this:
+
+  ```graphql
+  type Subscription {
+    newMessage(chatId: ID!): Message
+  }
+  ```
+
+  This subscription is called `newMessage`, and it takes a `chatId` as an argument. It is used to subscribe to new messages in a specific chat.
+
+- **Step 1**. A client application initiates a WebSocket connection to the graph. The WebSocket connection allows for real-time communication between the client and graph.
+
+- **Step 2**. When a user joins a chat or opens a messaging window, the client sends a subscription request to the server. For example:
+
+  ```graphql
+  subscription {
+    newMessage(chatId: "123") {
+      text
+      sender
+      timestamp
+    }
+  }
+  ```
+
+  This subscription request tells the graph to send new messages for the chat with `chatId` "123" to the client in real time. The client specifies which fields of the `Message` type it wants to receive.
+
+- **Step 3**. When a new message is sent within the specified chat, the client initiates a GraphQL mutation to create the message. A mutation resolver is responsible for handling the request, including inserting data and returning it.
+
+- **Step 4**. The graph publishes the new message data to the subscribed clients. It sends the new message data as a response to the client's subscription, over the WebSocket connection.
+
+- **Step 5**. The client application receives the new message data and updates the chat interface in real time. The user sees the incoming message instantly without needing to refresh or manually request updates.
+
+The subscription notification latency is the time between steps 4 and 5: from when your graph sends the update—often via your [router](/router)—to when the client receives it.
+
+High latency can indicate network issues or inefficient data fetching. Low latency is crucial for real-time applications to deliver data in a timely manner.
+
 ### Request latency distribution
 
 <img
@@ -172,3 +230,13 @@ Request latency metrics provide crucial insights into the performance of various
 />
 
 The request latency distribution graph illustrates the frequency and volume of your request latencies. This graph can help you identify central tendencies, variability, and patterns in your request latency.
+
+### Subscription notification latency distribution
+
+<img
+  src="../img/insights-subscription-latency-distribution.jpg"
+  className="screenshot"
+  alt="The Insights page in GraphOS Studio"
+/>
+
+The subscription notification latency distribution graph offers the same data and insights as the request latency distribution histogram, but focusing only on subscription notifications latency rather.
