Update links and redirects

--- a/src/content/graphos/delivery/index.mdx
+++ b/src/content/graphos/delivery/index.mdx
@@ -29,4 +29,4 @@ GraphOS **contracts** are an enterprise feature that let you deliver _different_
 
 ## Client operation validation
 
-In addition to the governance and delivery tools for schema developers, Apollo provides a CLI command for app developers to confirm that GraphQL operations in a client application are compatible with the published schema. Refer to the [Validating client operations page](./validating-client-operations) for more information.
+In addition to the governance and delivery tools for schema developers, Apollo provides a CLI command for app developers to confirm that GraphQL operations in a client application are compatible with the published schema. Refer to the [Validating client operations page](/rover/validating-client-operations) for more information.
