--- a/src/content/graphos/delivery/index.mdx
+++ b/src/content/graphos/delivery/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Schema delivery pipeline
-description: Ensure streamlined, error-free schema development using the GraphOS suite of schema development tools
+description: Ensure streamlined schema development using the GraphOS suite of tools
 ---
 
 GraphOS provides schema development tools to foster collaboration and efficiently deploy changes to your supergraph schema. These tools fall into two main categories:
